--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,45 +1,35 @@
 .ContainerBanner{
-    overflow: hidden;
+    height: 30rem;
+    position: relative;
 
-    width: 100%;
-    height: 30vh;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 
 .ContainerBanner .Banner{
-    position: absolute;
     object-fit: cover;
-
     width: 100%;
-    height: 30vh;
-
+    height: 30rem;
     opacity: 0.2;
-
+    position: absolute;
     
     
 }
 
 .ContainerTitle{
     z-index: 55;
-
-    width: 100%;
     height: 100%;
 
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .ContainerBanner h1{
-    font-size: 3rem;
+    font-size: 4rem;
 }
 
 .ContainerBanner h2{
-    font-size: 2rem;
+    font-size: 3rem;
     color: #ddd;
 }
