--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,10 +1,8 @@
 .HomeContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
 
-    height: 100vh;
+    
+
 }
 
 .imgProfile{
@@ -19,14 +17,20 @@
 
 
 .ParagrafoContainer{
-    text-align: center;
     width: 45%;
-    margin-top: 2rem;
+    margin-top: 5rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
 }
 
 
 .ParagrafoContainer p{
+    text-align: center;
     font-size: 2rem;
+    margin-top: 5rem;
 }
 
 .ParagrafoContainer p span{
@@ -39,16 +43,31 @@
   100% { transform: rotateY(0deg); }
 }
 
-.ContainerProjectHome{
-    width: 100%;
+.ContainerProjectHome, .ContainerContactHome{
+    width: 90%;
     padding: 4rem;
     margin-top: 2rem;
+
+    border-top: 1px rgba(0, 0, 255, 0.55) dotted;
+
+    margin: 5rem auto;
 }
 
 
-.ContainerProjectHome h2{
-    font-size: 3rem;
+.titleSectionProject, .TitleContainerContact {
+    font-size: 4rem;
     display: flex;
     align-self: self-start;
+
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+
+}
+
+
+.ContainerProjectHome div{
+    display: flex;
+    justify-content: space-around;
 
 }
